# fcitx5-boshiamyEx

./: CMakeLists.txt  install.sh
src/: CMakeLists.txt  boshiamy.txt  boshiamyEx-addon.conf.in  boshiamyEx.conf  candidate.cpp  candidate.h  dict.cpp  dict.h  engine.cpp  engine.h  enginefactory.cpp  enginefactory.h  state.cpp  state.h
src/boshiamyEx/: zhuyin.dict
